--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="recipes/friedrice.html">Fried Rice Recipe</a></li>
         <li><a href="recipes/kimchifriedrice.html">Kimchi Fried Rice Recipe</a></li>
+        <li><a href="recipes/shrimpfriedrice.html">Shrimp Fried Rice</a></li>
     </ul>
 </body>
 </html>
