Add style.css for initial styling

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="https://images.pexels.com/photos/616484/pexels-photo-616484.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+    <br>
     <ul>
         <li><a href="recipes/friedrice.html">Fried Rice Recipe</a></li>
         <li><a href="recipes/kimchifriedrice.html">Kimchi Fried Rice Recipe</a></li>
